# tetris-dual-fastapi

./: CHANGED.md  NGINX_CONFIG.md  PRODUCTION_FIX_CHECKLIST.md  SUMMARY.md
backend/: .env.example  .gitignore  API_CHANGES.md  API_REFERENCE.md  CORS_SETUP.md  DEPLOYMENT_QUICK_REFERENCE.md  MIGRATION.md  NO_CORS_SETUP.md  PRODUCTION.md  QUICKSTART.md  QUICK_FIX.md  README.md  SETUP.md  SYSTEMD_SETUP.md  check-production.sh  create_database.sql  diagnose-service.sh  fix-cors.sh  gunicorn.conf.py  init_db.sql  pyproject.toml  start-prod.bat  start-prod.sh  start.bat  start.sh  tetris-dual-backend.service
backend/app/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: leaderboard.py  scores.py
frontend/: API_INFO_USAGE.md  App.tsx  ENV_SETUP.md  README.md  TESTING.md  constants.ts  deploy.sh  env.template  index.html  metadata.json  package.json  pnpm-lock.yaml  types.ts  vite-env.d.ts  vite.config.ts
frontend/components/: ApiInfo.tsx  ApiStatus.tsx  Leaderboard.tsx  NextPiece.tsx  TetrisBoard.tsx
frontend/hooks/: useTetris.ts
frontend/services/: geminiService.ts  leaderboardService.ts
